--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Experimental improvement of the Polopoly eclipse plugin.
 
-Use Ctrl+Shift+I to launch Show Input Template dialog similar to the Show Type and Show Resource dialog.
+Use Ctrl+Shift+I to launch Show Input Template dialog similar to the Show Type and Show Resource dialogs.
