--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Experimental improvement of the Polopoly eclipse plugin.
 
-Use Ctrl+Shift+I to launch Show Input Template dialog similar to the Show Type and Show Resource dialogs (Command name Open Input Template)
+Use Ctrl+Alt+I to open input template by externalid (Open Input Template)
+Use Ctrl+Alt+P to open content by externalid (Open Content by External Id)
+Use Ctrl+Alt+E to open (input template|content) by externalid (Open by External Id)
 Use Alt+Shift+X I to import currently active file as content XML (Command name Import Content XML)
