--- a/README
+++ b/README
@@ -1,6 +1,4 @@
 Experimental improvement of the Polopoly eclipse plugin.
 
-Use Ctrl+Alt+I to open input template by externalid (Open Input Template)
-Use Ctrl+Alt+P to open content by externalid (Open Content by External Id)
-Use Ctrl+Alt+E to open (input template|content) by externalid (Open by External Id)
+Use Ctrl+Alt+E to open by externalid (Open by External Id)
 Use Alt+Shift+X I to import currently active file as content XML (Command name Import Content XML)
